final version of aria ta1 seminar

--- a/2025-aria-ta1-seminar/static/main.css
+++ b/2025-aria-ta1-seminar/static/main.css
@@ -78,3 +78,15 @@ a.existingWikiWord {
 .thing {
     color: blue;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+th {
+    border-style: solid;
+}
+
+td {
+    border-style: solid;
+}
